# PdfDiff

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/pdfdiff/: Dockerfile  base_pdf_diff.py  docker-compose.yml  main.py  pdf_diff.py  pdfdiff.py
src/pdfdiff/imagediff/: base_image_diff.py  image_diff.py
src/pdfdiff/images2pdf/: base_images_2_pdf.py  images_2_pdf.py
src/pdfdiff/magickcmdtools/: magick_append_images.py  magick_executor.py
src/pdfdiff/pdf2images/: base_pdf_2_images.py  pdf_2_images_by_gs.py
tests/: test_thread_pool_request.py
tests/data/images/: __init__.py
tests/data/pdfs/: 10pages.ps  10pages1.ps  create_pdf.py
tests/pdfdiff/: test_pdfdiff.py
tests/pdfdiff/imagediff/: test_image_diff.py
