[project]
name = "pdfdiff"
version = "0.1.0"
description = ""
authors = [
    {name = "manhdt",email = "thitkhotau.no1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=12.1.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "pdfdiff", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "hypothesis (>=6.151.4,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry.scripts]
pdfdiff = "pdfdiff.main:main"